fix bars