@@ -70,12 +70,26 @@ public class PortfolioCalculationService {
 		Optional.ofNullable(portfolio).orElseThrow(() -> new ResourceNotFoundException("Portfolio not found."));
 		LOG.info("Portfolio calculation bars called for: {}", portfolio.getId());
 		List<PortfolioToSymbol> portfolioToSymbols = List.copyOf(portfolio.getPortfolioToSymbols());
-		List<PortfolioElement> portfolioElements = portfolioToSymbols.stream().flatMap(portfolioPts -> StreamHelpers
-				.toStream(this.dailyQuoteRepository.findBySymbolId(portfolioPts.getSymbol().getId(),
-						cutOffDate.minus(1, ChronoUnit.MONTHS), LocalDate.now()))
-				.map(dailyQuote -> new PortfolioElement(portfolioPts.getSymbol().getId(), dailyQuote.getLocalDay(),
-						dailyQuote.getClose(), Symbol.QuoteSource.PORTFOLIO.equals(portfolioPts.getSymbol().getQuoteSource()) ? portfolioPts.getSymbol().getName() : portfolioPts.getSymbol().getSymbol(), portfolioPts.getWeight())))
-				.toList();
+		List<PortfolioElement> portfolioElements = portfolioToSymbols.stream()
+				.flatMap(portfolioPts -> StreamHelpers
+						.toStream(this.dailyQuoteRepository.findBySymbolId(portfolioPts.getSymbol().getId(),
+								cutOffDate.minus(1, ChronoUnit.MONTHS), LocalDate.now()))
+						.map(dailyQuote -> new PortfolioElement(portfolioPts.getSymbol().getId(),
+								dailyQuote.getLocalDay(), dailyQuote.getClose(),
+								Symbol.QuoteSource.PORTFOLIO.equals(portfolioPts.getSymbol().getQuoteSource())
+										? portfolioPts.getSymbol().getName()
+										: portfolioPts.getSymbol().getSymbol(),
+								portfolioPts.getWeight())))
+				.collect(Collectors.toList());
+
+		List<PortfolioElement> compQuotesPE = comparisonQuotes.stream()
+				.flatMap(compQuotes -> compQuotes.dailyQuoteEntityDtos.stream())
+				.map(dQuote -> new PortfolioElement(dQuote.entity().getSymbol().getId(), dQuote.entity().getLocalDay(),
+						dQuote.entity().getClose(), dQuote.entity().getSymbol().getSymbol(), 1L))
+				.collect(Collectors.toList());
+
+		portfolioElements.addAll(compQuotesPE);
+
 		List<PortfolioElement> cutOffPEs = portfolioElements.stream()
 				.flatMap(pe -> this.findValueAtDate(portfolioElements, cutOffDate, pe.symbolId()).stream())
 				.filter(StreamHelpers.distinctByKey(PortfolioElement::symbolId)).toList();
@@ -92,8 +106,7 @@ public class PortfolioCalculationService {
 							: pe.value()
 									.divide(cutOffPEs.stream().filter(myPe -> myPe.symbolId().equals(pe.symbolId()))
 											.map(myPe -> myPe.value()).findFirst().get(), 8, RoundingMode.HALF_EVEN)
-									.subtract(BigDecimal.ONE)
-									.multiply(BigDecimal.valueOf(100));
+									.subtract(BigDecimal.ONE).multiply(BigDecimal.valueOf(100));
 			return new PortfolioElement(pe.symbolId(), pe.localDate(), value, pe.symbolName(), pe.weight());
 		}).toList();
 		return resultPortfolioElements;
